<resources>
    <string name="app_name">蜜蜂兼职</string>

    <string name="copyright_date">Copyright © 2018-2019</string>
    <string name="copyright_name">蜜蜂兼职团队 版权所有</string>

    <!--四个菜单项-->
    <string name="my_menu1_name">附近兼职</string>
    <string name="my_menu2_name">短期兼职</string>
    <string name="my_menu3_name">长期兼职</string>
    <string name="my_menu4_name">在家兼职</string>

    <string name="my_item1_name">已报名</string>
    <string name="my_item2_name">已录用</string>
    <string name="my_item3_name">已到岗</string>
    <string name="my_item4_name">已完成</string>

    <string name="item1_name">我的简历</string>
    <string name="item2_name">我的收藏</string>
    <string name="item3_name">个人认证</string>
    <string name="item4_name">我的钱包</string>

    <string name="item5_name">意见反馈</string>
    <string name="item6_name">关于我们</string>
    <string name="item7_name">发布兼职</string>
    <string name="item8_name">我的设置</string>

    <!--设置界面的item-->
    <string name="setting_item1_name">重置密码</string>
    <string name="setting_item2_name">常见问题</string>
    <string name="setting_item3_name">清理缓存</string>
    <string name="setting_item4_name">检查更新</string>

    <string name="app_about_text">蜜蜂兼职是一款为用户提供在线兼职信息的APP，宗旨是业界好用，服务大众，做到方便用户，给用户一个优秀好用的兼职平台。</string>
    <string name="app_job_text">温馨提示：若商家要求缴纳费用或押金，请勿支付并向我们举报！</string>


</resources>
